--- a/tuetc/vue_object.html
+++ b/tuetc/vue_object.html
@@ -23,12 +23,12 @@ and open the template in the editor.
                 data2: '2'
               }
             });  
-            alert(app.data1);
-            alert(app.data2);
+            console.log(app.data1);
+            console.log(app.data2);
             app.data1+=' cộng dồn chuỗi';
             app.data2='giá trị khác';
-            alert(app.data1);
-            alert(app.data2);
+            console.log(app.data1);
+            console.log(app.data2);
         </script>
     </body>
 </html>
