Shorthands: v-bind, v-on

--- a/tuetc/v_bind.html
+++ b/tuetc/v_bind.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     </head>
     <body>
         <div id="v_bind">
-          <div v-bind:title="value_for_title_attribute">
+          <div :title="value_for_title_attribute">
             demo title
           </div>
             <input v-bind:type="value_for_type_attribute">
