--- a/tuetc/event.html
+++ b/tuetc/event.html
@@ -17,7 +17,7 @@ and open the template in the editor.
           <p>{{ message_luanlt }}</p>
           <button v-on:click="reverseFirstString">Đảo chuỗi đầu tiên</button>
           <button v-on:click="reverseSecondString">Đảo chuỗi thứ hai</button>
-          <button v-on:click="reverseBothString">Đảo cả 2 chuỗi</button>
+          <button @click="reverseBothString">Đảo cả 2 chuỗi</button>
         </div>
         <hr>
         <input id="event_keypress" style="width: 500px;" type="text" v-on:keypress="show_dialog" placeholder="Nhập vào đây để thấy event keypress"/>
