sử dụng biểu thức trong {{ }} Using JavaScript Expressions

--- a/tuetc/id.html
+++ b/tuetc/id.html
@@ -13,8 +13,10 @@ and open the template in the editor.
         
     </head>
     <body>
-        <div id="app" v-html="message">
-          
+        <div id="app">
+          {{ message+'tuetc' }}
+          <br>
+          {{ 1==1 ? 'YES' : 'NO' }}
         </div>
         <script type="text/javascript">
             var app = new Vue({
