--- a/tuetc/if.html
+++ b/tuetc/if.html
@@ -15,6 +15,8 @@ and open the template in the editor.
     <body>        
         <div id="div1" v-if="seen1">
             cái này sẽ dc hiển thị vì seen của nó là true, tức là i==1000
+            <h1 v-if="true">Yes</h1>
+            <h1 v-if="false">No</h1>
         </div>
         <div id="div2" v-if="seen2">
             cái này sẽ dc hiển thị vì seen của nó là false, tức là i!=1000
