--- a/tuetc/if.html
+++ b/tuetc/if.html
@@ -17,6 +17,19 @@ and open the template in the editor.
             cái này sẽ dc hiển thị vì seen của nó là true, tức là i==1000
             <h1 v-if="true">Yes</h1>
             <h1 v-if="false">No</h1>
+            
+            <div v-if="type === 'A'">
+              A
+            </div>
+            <div v-else-if="type === 'B'">
+              B
+            </div>
+            <div v-else-if="type === 'C'">
+              C
+            </div>
+            <div v-else>
+              Not A/B/C
+            </div>
         </div>
         <div id="div2" v-if="seen2">
             cái này sẽ dc hiển thị vì seen của nó là false, tức là i!=1000
@@ -26,7 +39,8 @@ and open the template in the editor.
             var app1 = new Vue({
               el: '#div1',
               data: {
-                seen1: i==1000
+                seen1: i==1000,
+                type: 'B'
               }
             })
             var app2 = new Vue({
