--- a/tuetc/id.html
+++ b/tuetc/id.html
@@ -18,13 +18,39 @@ and open the template in the editor.
           <br>
           {{ 1==1 ? 'YES' : 'NO' }}
         </div>
+        
+        <div id="key-example" class="demo">
+          <div>
+            <template v-if="loginType === 'username'">
+              <label>Username</label>
+              <input placeholder="Enter your username" key="username-input">
+            </template>
+            <template v-else="">
+              <label>Email</label>
+              <input placeholder="Enter your email address" key="email-input">
+            </template>
+          </div>
+          <button @click="toggleLoginType">Toggle login type</button>
+        </div>
         <script type="text/javascript">
             var app = new Vue({
               el: '#app',
               data: {
                 message: 'hiển thị thông tin tại đây.'
               }
-            });           
+            });  
+            
+            new Vue({
+              el: '#key-example',
+              data: {
+                loginType: 'username'
+              },
+              methods: {
+                toggleLoginType: function () {
+                  this.loginType = this.loginType === 'username' ? 'email' : 'username'
+                }
+              }
+            })
         </script>
     </body>
 </html>
