v-show. Lưu ý: v-show k như v-if, có nghĩa là nó k có else if, else; nó k làm việc với <template> element, nếu cho <template> element vào thi toàn bộ vue đó chạy bị lỗi. Khi v-show="true" thi có nghĩa là css display:block, còn k thi display:none

--- a/tuetc/id.html
+++ b/tuetc/id.html
@@ -17,6 +17,8 @@ and open the template in the editor.
           {{ message+'tuetc' }}
           <br>
           {{ 1==1 ? 'YES' : 'NO' }}
+          <h1 v-show="1==1">true</h1>
+          <h1 v-show="false">false</h1>
         </div>
         
         <div id="key-example" class="demo">
