mức độ ưu tiên v-for cao hơn v-if. Có nghĩa là trong cùng một dòng vừa có v-for vừa v-if thi nó sẽ chạy vòng for trước, trong mỗi lần chạy trong vòng for thi nó mới chạy if này

--- a/tuetc/id.html
+++ b/tuetc/id.html
@@ -13,6 +13,9 @@ and open the template in the editor.
         
     </head>
     <body>
+<!--        <li v-for="todo in todos" v-if="!todo.isComplete">
+          {{ todo }}
+        </li>-->
         <div id="app">
           {{ message+'tuetc' }}
           <br>
