created property của vue giống constructor của class trong hướng đối tượng

--- a/examples/commits/index.html
+++ b/examples/commits/index.html
@@ -22,6 +22,7 @@
     <script src="../../dist/vue.min.js"></script>
   </head>
   <body>
+      <div id="tuetc"></div>
     <div id="demo">
       <h1>Latest Vue.js Commits</h1>
       <template v-for="branch in branches">
